--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,63 @@
+@media (min-width : 500px) {
+  #controlKnobsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100px;
+    height: 300px;
+    background-image : url(knobPanelVertical.png);
+  }
+  .settingsContainer {
+    height : 100%; 
+    display : flex;
+    flex-direction : row;
+    justify-content : center;
+    align-items : center;
+  }
+  .keyboardContainer {
+    width : 400px;
+    height : 125px;
+    background-image : url(pianoPanel400W.png);
+  }
+  .keyboard {
+    position : relative;
+    width : 280px;
+    height : 125px;
+    margin-left : 60px;
+    margin-top : 2px;
+  }
+}
+
+@media (max-width : 499px) {
+  #controlKnobsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width : 300px;
+    height: 130px;
+    background-image : url(knobPanelHorizontal.png);
+  }
+  .settingsContainer {
+    height : 100%; 
+    display : flex;
+    flex-direction : column;
+    justify-content : center;
+    align-items : center;
+  }
+  .keyboardContainer {
+    width : 300px;
+    height : 125px;
+    background-image : url(pianoPanel300W.png);
+  }
+  .keyboard {
+    position : relative;
+    width : 280px;
+    height : 125px;
+    margin-left : 10px;
+    margin-top : 2px;
+  }
+}
+
 .keys:hover {
   cursor : pointer;
 }
@@ -47,15 +107,10 @@ body {
 .soundSelection {
   background-color: black;
 }
+/*
 #controlKnobsContainer {
-  background-image : url(knobPanelVertical.png);
-  width: 100px;
-  height: 300px;
   display : flex;
-  flex-direction: column;
-  justify-content: center;
-
-}
+}*/
 .controlKnob {
   position: relative;
   background-color: grey;
