--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
     background-image : url(knobPanelVertical.png);
   }
   .settingsContainer {
-    height : 100%; 
     display : flex;
     flex-direction : row;
     justify-content : center;
@@ -38,7 +37,6 @@
     background-image : url(knobPanelHorizontal.png);
   }
   .settingsContainer {
-    height : 100%; 
     display : flex;
     flex-direction : column;
     justify-content : center;
@@ -73,14 +71,12 @@
   flex-direction : column;
   justify-content : center;
   align-items: center;
+  align-content: center;
+  height : 100vh;
   /*background-color: black;*/
 }
 body {
   background-color: #101010;
-  display: flex;
-  height: 100vh;
-  flex-direction : column;
-  justify-content: center;
   margin : 0px;
 }
 .sounds {
